[package]
name = "sev-verifier"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sev-verify"
path = "src/main.rs"
test = false
bench = false

[dependencies]
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
pem = "3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sev = { version = "6.2.1", features = ["sev", "snp", "crypto_nossl"] }
